package com.example.duelmatrix.dto;

public class MatrixResponse {

}
