package com.example.duelmatrix.pattern.template;

public class AbstractMatrixBuilder {

}
