package com.example.duelmatrix.pattern.template;

public class StandardMatrixBuilder {

}
